# j-igno

./: .gitignore  README.md  bayesian_igno.ipynb  broken_b-igno.ipynb  build.sh  debug_precision.py  evaluate.py  jigno.def  load_this_before_everything_else.py  local_debug.txt  local_debug_x64.txt  pyproject.toml  run.sh  slurm_debug.txt  slurm_debug_x64.txt  take_2.ipynb  training.py
configs/evaluation/: darcy_continuous_in.yaml  darcy_continuous_out.yaml  darcy_piecewise_in.yaml  eit_in.yaml
configs/training/: darcy_continuous.yaml  darcy_piecewise.yaml  eit.yaml
documents/: bayesian_igno_technical_spec.md
results/: 18_dims_lhs.json  4_dims_clean_in.json  6_dims_clean_in.json  8_dims_clean_in.json  8_dims_clean_in_all_200_samples.json  alpha_10.json  alpha_15.json  alpha_5.json  alpha_8_high_mode.json  broken.json  eval_igno_nobs100_clean_2026-01-29_17-20-25.json  feb_2.json
runs/12_dims/: config.yaml
runs/12_dims/tensorboard/: events.out.tfevents.1770034737.gpu01.hpc.tudelft.nl
runs/12_dims/weights/: best.pt  last.pt
runs/18_dims/tensorboard/: events.out.tfevents.1769636686.henrylinux
runs/18_dims_lhs/: config.yaml
runs/18_dims_lhs/tensorboard/: events.out.tfevents.1769815926.henrylinux
runs/4_dims/: config.yaml
runs/4_dims/tensorboard/: events.out.tfevents.1770160206.gpu02.hpc.tudelft.nl
runs/6_dims/: config.yaml
runs/6_dims/tensorboard/: events.out.tfevents.1770158570.gpu17.daic.tudelft.net
runs/8_dims/: config.yaml
runs/8_dims/tensorboard/: events.out.tfevents.1770139213.gpu11.hpc.tudelft.nl
runs/alpha_10/: config.yaml
runs/alpha_10/tensorboard/: events.out.tfevents.1770070323.gpu01.hpc.tudelft.nl
runs/alpha_15/: config.yaml
runs/alpha_5/: config.yaml
runs/alpha_8/: config.yaml
runs/broken_trial/: config.yaml
runs/nemesis/: config.yaml
runs/nemesis/weights/: best.pt  last.pt
runs/new_prior/: config.yaml
runs/partial_trial_run_for_alpha_10/: config.yaml
src/components/: activation.py  cnn.py  encoder.py  fcn.py  mon.py  nf.py
src/evaluation/: __init__.py  igno.py  metrics.py
src/problems/: __init__.py  darcy_continuous.py  darcy_piecewise.py  eit.py
src/solver/: config.py  trainer.py
src/utils/: GenPoints.py  GenPoints_Time.py  Losses.py  PlotFigure.py  RBFInterpolatorMesh.py  TestFun_ParticleWNN.py  misc_utils.py  solver_utils.py
(+8 files in other folders)
