[project]
name = "J-IGNO"
version = "0.1.0"
description = "JAX port of IGNO and MSc Code"
readme = "README.md"
requires-python = ">=3.11,<3.12.0"
dependencies = [
    "flax>=0.8.4",
    "h5py>=3.10.0",
    "jax==0.4.26; platform_system == 'Darwin'",
    "jax[cuda12]==0.4.26; platform_system == 'Linux'",
    "matplotlib>=3.8.0",
    "numpy>=2.4.1",
    "numpyro>=0.19.0",
    "optax>=0.2.2",
    "pandas>=2.0.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0.3",
    "scienceplots>=2.1.0",
    "scipy>=1.12.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]
