[project]
name = "J-IGNO"
version = "0.1.0"
description = "JAX port of IGNO"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "flax>=0.8.4",
    "h5py>=3.10.0",
    "jax[cuda12]==0.4.26",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0,<2.0",
    "optax>=0.2.2",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "scienceplots>=2.1.0",
    "scipy>=1.12.0",
    "tensorboard>=2.15.0",
    "tensorboardx>=2.6.0",
    "tqdm>=4.66.0",
]

[tool.uv.sources]
jax = { index = "jax" }
jaxlib = { index = "jax" }

[[tool.uv.index]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
explicit = true

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "pytest>=8.0.0",
]
